maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:46: error: type mismatch;
 found   : Unit
 required: Boolean
			}while(sommeAngle = 0)
                                          ^