maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
def murGauche():Boolean={
	var y = getDirection()
	setDirection(Direction.WEST)
	if(estFaceMur() && getX == 0){
		return true
	}else{
		setDirection(y)
		return false
	}
}

	def murAGauche():Boolean={
		gauche()
		if(estFaceMur()){
			droite()
			return true
		}else{
			droite()
			return false
		}
	}
	def keepHandOnSideWall(){
		if (murAGauche()){
			if(!estFaceMur()){
				avance()
			}else{
				droite()
				sommeAngle = sommeAngle - 1
			}
		}else{
			gauche()
			sommeAngle = sommeAngle + 1
			if(!estFaceMur()){
				avance()
			}
		}
	}
var sommeAngle = 0
	while(!murGauche()){
		setDirection(Direction.WEST)
		if(murAGauche()){
			do {
				keepHandOnSideWall()
			}while(sommeAngle = 0)
			sommeAngle = 0
		}else{
			avance()
		}
	}
while(!estSurBiscuit()){
	keepHandOnSideWall()}
	prendBiscuit()
}
